feat: add option to start hosts as a DaemonSet
Add a `daemonset` option for managing hosts as a DaemonSet instead of
just a Deployment.

Signed-off-by: Dan Norris <protochron@users.noreply.github.com>

--- a/sample.yaml
+++ b/sample.yaml
@@ -18,3 +18,5 @@ spec:
   secretName: cluster-secrets
   logLevel: INFO
   natsAddress: nats://nats-cluster.default.svc.cluster.local
+  # Enable the following to run the wasmCloud hosts as a DaemonSet
+  #daemonset: true
