--- a/deploy/local/local-registry.yaml
+++ b/deploy/local/local-registry.yaml
@@ -1,3 +1,8 @@
 - op: add
   path: /spec/template/spec/containers/0/image
   value: localhost:5001/wasmcloud-operator:latest
+- op: replace
+  path: /spec/template/spec/containers/0/env/0
+  value:
+    name: RUST_LOG
+    value: info,controller::services=debug,async_nats=warn,controller::controller=debug
