--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ axum = {workspace = true}
 axum-server = {workspace = true}
 anyhow = {workspace = true}
 ctrlc = {workspace = true}
+cloudevents-sdk = {workspace = true}
 futures = {workspace = true}
 handlebars = {workspace = true}
 json-patch = {workspace = true}
@@ -42,6 +43,7 @@ serde_yaml = {workspace = true}
 thiserror = {workspace = true}
 time = {workspace = true}
 tokio = {workspace = true}
+tokio-util = {workspace = true}
 tracing = {workspace = true}
 tracing-opentelemetry = {workspace = true}
 tracing-subscriber = {workspace = true}
@@ -56,6 +58,7 @@ async-nats = "0.33"
 axum = { version = "0.6", features = ["headers"] }
 axum-server = { version = "0.4", features = ["tls-rustls"] }
 anyhow = "1"
+cloudevents-sdk = "0.7"
 ctrlc = "3"
 futures = "0.3"
 handlebars = "5.1"
@@ -73,6 +76,7 @@ serde_yaml = "0.9"
 thiserror = "1"
 time = "0.3"
 tokio = { version = "1", features = ["full"] }
+tokio-util = { version = "0.7", features = ["rt"] }
 tracing = "0.1"
 tracing-opentelemetry = "0.20"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
