--- a/charts/wasmcloud-operator/templates/deployment.yaml
+++ b/charts/wasmcloud-operator/templates/deployment.yaml
@@ -36,7 +36,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: RUST_LOG
-              value: info
+              value: info,async_nats=error
             - name: POD_NAMESPACE
               valueFrom:
                 fieldRef:
