feat: rework the operator for wasmCloud 1.0 compatibility
wasmCloud 1.0 fully converts over to using components among other large
changes, so we need to rework the operator to account for it. 1.0 is
still in the works, so this updates the operator to depend on wasmCloud
1.0 libraries along with refactoring the service creation code to use
the updated application manifest format.

Once this is in we will likely cut a 0.2.0 pre-release and wait for an
actual release until wasmCloud 1.0.0 and wadm 0.11 are out.

This also adds a new field to the CRD so that you can specify the full
image reference instead of just the version. The `image` parameter takes
precedence.

Signed-off-by: Dan Norris <protochron@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,8 +84,8 @@ tracing-opentelemetry = "0.20"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 utoipa = { version = "4.1", features = ["axum_extras"] }
 uuid = { version = "1", features = ["v5"] }
-wadm = "0.10"
-wash-lib = "0.17"
+wadm = "0.11.0-alpha.2"
+wash-lib = { git = "https://github.com/wasmcloud/wasmcloud.git",tag = "wash-cli-v0.27.0-alpha.2" }
 wasmcloud-operator-types = { version="*", path = "./crates/types" }
 
 [workspace]
