--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,7 +68,7 @@ json-patch = "1.2.0"
 k8s-openapi = { version = "0.20", default-features = false}
 kube = { version = "0.87", default-features = false}
 opentelemetry = { version = "0.20", features = ["metrics", "trace", "rt-tokio"] }
-opentelemetry-otlp = { version = "0.13", features = ["tokio"] }
+opentelemetry-otlp = { version = "0.13", features = ["tokio", "tls-roots", "gzip-tonic"] }
 rcgen = "0.11"
 schemars = "0.8"
 secrecy = "0.8"
