--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wasmcloud-operator"
-version = "0.2.0"
+version = "0.2.0-alpha.1"
 edition = "2021"
 
 [[bin]]
@@ -21,53 +21,60 @@ path = "src/lib.rs"
 edition = "2021"
 
 [dependencies]
-async-nats = {workspace = true}
-axum = {workspace = true}
-axum-server = {workspace = true}
-anyhow = {workspace = true}
-ctrlc = {workspace = true}
-cloudevents-sdk = {workspace = true}
-config = {workspace = true}
-futures = {workspace = true}
-handlebars = {workspace = true}
-json-patch = {workspace = true}
-k8s-openapi = {workspace = true, features = ["v1_28", "schemars"]}
-kube = {workspace = true, features = ["runtime", "derive", "default"]}
-opentelemetry = {workspace = true}
-opentelemetry-otlp = {workspace = true}
-rcgen = {workspace = true}
-schemars = {workspace = true}
-secrecy = {workspace = true}
-serde = {workspace = true}
-serde_json = {workspace = true}
-serde_yaml = {workspace = true}
-thiserror = {workspace = true}
-time = {workspace = true}
-tokio = {workspace = true}
-tokio-util = {workspace = true}
-tracing = {workspace = true}
-tracing-opentelemetry = {workspace = true}
-tracing-subscriber = {workspace = true}
-utoipa = {workspace = true}
-uuid = {workspace = true}
-wadm = {workspace = true}
-wash-lib = {workspace = true}
-wasmcloud-operator-types = {workspace = true}
+async-nats = { workspace = true }
+axum = { workspace = true }
+axum-server = { workspace = true }
+anyhow = { workspace = true }
+ctrlc = { workspace = true }
+cloudevents-sdk = { workspace = true }
+config = { workspace = true }
+futures = { workspace = true }
+handlebars = { workspace = true }
+json-patch = { workspace = true }
+k8s-openapi = { workspace = true, features = ["v1_28", "schemars"] }
+kube = { workspace = true, features = ["runtime", "derive", "default"] }
+opentelemetry = { workspace = true }
+opentelemetry-otlp = { workspace = true }
+rcgen = { workspace = true }
+schemars = { workspace = true }
+secrecy = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+serde_yaml = { workspace = true }
+thiserror = { workspace = true }
+time = { workspace = true }
+tokio = { workspace = true }
+tokio-util = { workspace = true }
+tracing = { workspace = true }
+tracing-opentelemetry = { workspace = true }
+tracing-subscriber = { workspace = true }
+utoipa = { workspace = true }
+uuid = { workspace = true }
+wadm = { workspace = true }
+wash-lib = { workspace = true }
+wasmcloud-operator-types = { workspace = true }
 
 [workspace.dependencies]
 async-nats = "0.33"
 axum = { version = "0.6", features = ["headers"] }
 axum-server = { version = "0.4", features = ["tls-rustls"] }
 anyhow = "1"
-config = {version = "0.14", default-features = false, features = ["convert-case", "async"]}
+config = { version = "0.14", default-features = false, features = [
+  "convert-case",
+  "async",
+] }
 cloudevents-sdk = "0.7"
 ctrlc = "3"
 futures = "0.3"
 handlebars = "5.1"
 json-patch = "1.2.0"
-k8s-openapi = { version = "0.20", default-features = false}
-kube = { version = "0.87", default-features = false}
-opentelemetry = { version = "0.20", features = ["metrics", "trace", "rt-tokio"] }
+k8s-openapi = { version = "0.20", default-features = false }
+kube = { version = "0.87", default-features = false }
+opentelemetry = { version = "0.20", features = [
+  "metrics",
+  "trace",
+  "rt-tokio",
+] }
 opentelemetry-otlp = { version = "0.13", features = ["tokio"] }
 rcgen = "0.11"
 schemars = "0.8"
@@ -84,14 +91,12 @@ tracing-opentelemetry = "0.20"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 utoipa = { version = "4.1", features = ["axum_extras"] }
 uuid = { version = "1", features = ["v5"] }
-wadm = "0.11.0-alpha.2"
-wash-lib = { git = "https://github.com/wasmcloud/wasmcloud.git",tag = "wash-cli-v0.27.0-alpha.2" }
-wasmcloud-operator-types = { version="*", path = "./crates/types" }
+wadm = "0.11.0-alpha.3"
+wash-lib = "0.20.0-alpha.2"
+wasmcloud-operator-types = { version = "*", path = "./crates/types" }
 
 [workspace]
-members = [
-  "crates/*"
-]
+members = ["crates/*"]
 resolver = "2"
 
 [profile.release]
