feat(*): Bumps to 0.2 for wasmcloud 1.0 support
This bumps both the version of the operator and the default host version
in the example to 1.0. Also updates the README to use the released wadm
chart

Signed-off-by: Taylor Thomas <taylor@cosmonic.com>

--- a/deploy/base/deployment.yaml
+++ b/deploy/base/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       serviceAccountName: wasmcloud-operator
       containers:
-        - image: ghcr.io/wasmcloud/wasmcloud-operator:latest
+        - image: ghcr.io/wasmcloud/wasmcloud-operator:0.2.0
           imagePullPolicy: Always
           name: wasmcloud-operator
           ports:
