--- a/charts/wasmcloud-operator/templates/cluster-role.yaml
+++ b/charts/wasmcloud-operator/templates/cluster-role.yaml
@@ -12,6 +12,7 @@ rules:
       - services
       - configmaps
       - serviceaccounts
+      - pods
     verbs:
       - get
       - list
@@ -60,6 +61,17 @@ rules:
       - apiregistration.k8s.io
     resources:
       - apiservices
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+  - apiGroups:
+      - discovery.k8s.io
+    resources:
+      - endpointslices
     verbs:
       - create
       - delete
