--- a/.github/workflows/chart.yaml
+++ b/.github/workflows/chart.yaml
@@ -73,7 +73,7 @@ jobs:
 
       - name: Package
         run: |
-          helm package chart -d .helm-charts
+          helm package charts/wasmcloud-operator -d .helm-charts
 
       - name: Login to GHCR
         uses: docker/login-action@v3
