--- a/sample.yaml
+++ b/sample.yaml
@@ -8,12 +8,12 @@ spec:
   issuers:
     - CDKF6OKPOBQKAX57UOXO7SCHURTOZWKWIVPC2HFJTGFXY5VJX44ECEHH
   # The lattice to connect the hosts to
-  lattice: 83a5b52e-17cf-4080-bac8-f844099f142e
+  lattice: default
   # Additional labels to apply to the host other than the defaults set in the controller
   hostLabels:
     test: value
   # Which wasmCloud version to use
-  version: "1.0.0"
+  version: "1.0.2"
   # The name of a secret in the same namespace that provides the required secrets.
   secretName: cluster-secrets
   logLevel: INFO
@@ -27,9 +27,9 @@ spec:
   #   - "kind-registry:5000"
   # Policy service configuration
   # policyService:
-  #   topic: "foo"
-  #   changesTopic: "bar"
-  #   timeoutMs: 5000
+  #   topic: "wasmcloud.policy"
+  #   #changesTopic: "bar"
+  #   timeoutMs: 10000
   # Additional options to control how the underlying wasmCloud hosts are scheduled in Kubernetes.
   # This includes setting resource requirements for the nats and wasmCloud host
   # containers along with any additional pot template settings.
