fix: allow nats address to include a port
This fix omits the preset NATS leaf node port `7422` from being
automatically set if the `natsAddress` field is set in the CRD. This
allows you to specify the port if it is not using the default at the
cost of making it required.

Signed-off-by: Dan Norris <protochron@users.noreply.github.com>

--- a/sample.yaml
+++ b/sample.yaml
@@ -17,7 +17,7 @@ spec:
   # The name of a secret in the same namespace that provides the required secrets.
   secretName: cluster-secrets
   logLevel: INFO
-  natsAddress: nats://nats-cluster.default.svc.cluster.local
+  natsAddress: nats://nats-cluster.default.svc.cluster.local:7422
   ################################################
   # Additional options that can be set for hosts:
   ################################################
@@ -27,9 +27,9 @@ spec:
   #   - "kind-registry:5000"
   # Policy service configuration
   # policyService:
-  #   topic: "wasmcloud.policy"
-  #   #changesTopic: "bar"
-  #   timeoutMs: 10000
+  #  topic: "wasmcloud.policy"
+  #  changesTopic: "bar"
+  #  timeoutMs: 10000
   # Additional options to control how the underlying wasmCloud hosts are scheduled in Kubernetes.
   # This includes setting resource requirements for the nats and wasmCloud host
   # containers along with any additional pot template settings.
