fix: add options for setting NATS leaf and client ports separately
PR #35 introduced a small regression which only impacts clients who are
trying to use nonstandard ports. This fixes the problem by allowing the
NATS leaf node and client ports to be configured separately in the CRD.

Signed-off-by: Dan Norris <protochron@users.noreply.github.com>

--- a/sample.yaml
+++ b/sample.yaml
@@ -12,12 +12,13 @@ spec:
   # Additional labels to apply to the host other than the defaults set in the controller
   hostLabels:
     test: value
+    cluster: kind
   # Which wasmCloud version to use
   version: "1.0.2"
   # The name of a secret in the same namespace that provides the required secrets.
   secretName: cluster-secrets
   logLevel: INFO
-  natsAddress: nats://nats-cluster.default.svc.cluster.local:7422
+  natsAddress: nats://nats-cluster.default.svc.cluster.local
   ################################################
   # Additional options that can be set for hosts:
   ################################################
