feat(helm): Kubernetes labels
Signed-off-by: Nicolas Lamirault <nicolas.lamirault@gmail.com>

--- a/charts/wasmcloud-operator/values.yaml
+++ b/charts/wasmcloud-operator/values.yaml
@@ -12,6 +12,9 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+additionalLabels: {}
+  # app: wasmcloud-operator
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
