--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,14 +31,14 @@ config = { workspace = true }
 futures = { workspace = true }
 handlebars = { workspace = true }
 json-patch = { workspace = true }
-k8s-openapi = { workspace = true, features = ["v1_28", "schemars"] }
+k8s-openapi = { workspace = true, features = ["v1_30", "schemars"] }
 kube = { workspace = true, features = ["runtime", "derive", "default"] }
 opentelemetry = { workspace = true }
 opentelemetry_sdk = { workspace = true }
 opentelemetry-otlp = { workspace = true }
 rcgen = { workspace = true }
 schemars = { workspace = true }
-secrecy = { workspace = true }
+secrecy = { workspace = true, features = ["serde"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
@@ -70,8 +70,8 @@ ctrlc = "3"
 futures = "0.3"
 handlebars = "5.1"
 json-patch = "1.4.0"
-k8s-openapi = { version = "0.20", default-features = false }
-kube = { version = "0.87", default-features = false }
+k8s-openapi = { version = "0.26", default-features = false }
+kube = { version = "2.0", default-features = false }
 opentelemetry = { version = "0.21", default-features = false }
 opentelemetry_sdk = { version = "0.21", features = [
   "metrics",
@@ -80,7 +80,7 @@ opentelemetry_sdk = { version = "0.21", features = [
 ] }
 opentelemetry-otlp = { version = "0.14", features = ["tokio"] }
 rcgen = "0.11"
-schemars = "0.8"
+schemars = "1.0"
 secrecy = "0.8"
 serde = "1"
 serde_json = "1"
