feat(status): add support to provide useful host information
Relates-to: #22
Signed-off-by: Jakob Beckmann <f4z3r-github@pm.me>

--- a/deploy/base/deployment.yaml
+++ b/deploy/base/deployment.yaml
@@ -72,6 +72,13 @@ rules:
       - patch
       - update
   - apiGroups:
+      - apps
+    resources:
+      - deployments/status
+      - daemonsets/status
+    verbs:
+      - get
+  - apiGroups:
       - rbac.authorization.k8s.io
     resources:
       - rolebindings
