--- a/charts/wadm-operator/values.yaml
+++ b/charts/wadm-operator/values.yaml
@@ -1,9 +1,9 @@
-# Default values for wasmcloud-operator.
+# Default values for wadm-operator.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 image:
-  repository: ghcr.io/wasmcloud/wasmcloud-operator
+  repository: ghcr.io/wasmcloud/wadm-operator
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -13,7 +13,7 @@ nameOverride: ""
 fullnameOverride: ""
 
 additionalLabels: {}
-  # app: wasmcloud-operator
+  # app: wadm-operator
 
 serviceAccount:
   # Specifies whether a service account should be created
