--- a/.github/workflows/chart.yaml
+++ b/.github/workflows/chart.yaml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Run chart-testing (lint)
         run: |
-          ct lint --config charts/wasmcloud-operator/ct.yaml
+          ct lint --config charts/wadm-operator/ct.yaml
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.12.0
@@ -54,7 +54,7 @@ jobs:
 
       - name: Run chart-testing (install)
         run: |
-          ct install --config charts/wasmcloud-operator/ct.yaml
+          ct install --config charts/wadm-operator/ct.yaml
 
   publish:
     if: ${{ startsWith(github.ref, 'refs/tags/chart-v') }}
@@ -73,7 +73,7 @@ jobs:
 
       - name: Package
         run: |
-          helm package charts/wasmcloud-operator -d .helm-charts
+          helm package charts/wadm-operator -d .helm-charts
 
       - name: Login to GHCR
         uses: docker/login-action@v3
