--- a/charts/wadm-operator/templates/deployment.yaml
+++ b/charts/wadm-operator/templates/deployment.yaml
@@ -1,14 +1,14 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "wasmcloud-operator.fullname" . }}
+  name: {{ include "wadm-operator.fullname" . }}
   labels:
-    {{- include "wasmcloud-operator.labels" . | nindent 4 }}
+    {{- include "wadm-operator.labels" . | nindent 4 }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      {{- include "wasmcloud-operator.selectorLabels" . | nindent 6 }}
+      {{- include "wadm-operator.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -16,7 +16,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "wasmcloud-operator.labels" . | nindent 8 }}
+        {{- include "wadm-operator.labels" . | nindent 8 }}
         {{- with .Values.podLabels }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
@@ -25,7 +25,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "wasmcloud-operator.service-account" . }}
+      serviceAccountName: {{ include "wadm-operator.service-account" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
