--- a/charts/wadm-operator/templates/service.yaml
+++ b/charts/wadm-operator/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "wasmcloud-operator.fullname" . }}
+  name: {{ include "wadm-operator.fullname" . }}
   labels:
-    {{- include "wasmcloud-operator.labels" . | nindent 4 }}
+    {{- include "wadm-operator.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: https
   selector:
-    {{- include "wasmcloud-operator.selectorLabels" . | nindent 4 }}
+    {{- include "wadm-operator.selectorLabels" . | nindent 4 }}
