--- a/charts/wadm-operator/templates/serviceaccount.yaml
+++ b/charts/wadm-operator/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "wasmcloud-operator.service-account" . }}
+  name: {{ include "wadm-operator.service-account" . }}
   labels:
-    {{- include "wasmcloud-operator.labels" . | nindent 4 }}
+    {{- include "wadm-operator.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
